fixing two col layout  on safari and firefox

--- a/src/pages/SignIn/Signin.module.css
+++ b/src/pages/SignIn/Signin.module.css
@@ -1,3 +1,7 @@
+.root {
+  min-height: 100vh;
+}
+
 .container {
   max-width: 340px;
   height: 100%;
