--- a/src/withComponents/Header/Header.module.css
+++ b/src/withComponents/Header/Header.module.css
@@ -1,3 +1,7 @@
+.headerWrapper {
+  flex: 0 0 auto;
+}
+
 .header {
   padding: 16px 32px;
 }
